# Distributed-cluster-chat-server-and-client

./: CMakeLists.txt  README.md  autobuild.sh
include/chatclient/: clientinit.h  config.h
include/connectserver/: connectserver.h  connectservice.h
include/rpcserver/: friendservice.h  groupservice.h  msgservice.h  rpcserver.h  userservice.h
middleware/: public.h
middleware/mysql/: CommonConnectionPool.cpp  CommonConnectionPool.h  Connection.cpp  Connection.h  friendmodel.cpp  friendmodel.h  group.h  groupmodel.cpp  groupmodel.h  offlinemessagemodel.cpp  offlinemessagemodel.h  user.h  usermodel.cpp  usermodel.h
middleware/protobuf/: qq.pb.cc  qq.pb.h  qq.proto
middleware/redis/: redis.cpp
other/: CMakeLists.txt  Logger.cpp  loadconfig.cpp
other/log/: Logger.h  lockqueue.h
src/: CMakeLists.txt
src/chatclient/: CMakeLists.txt  ChatClientLauncher.cpp  clientinit.cpp  config.cpp
src/connectserver/: CMakeLists.txt  ConnectServerLauncher.cpp  connectserver.cpp  connectservice.cpp
src/rpcserver/: CMakeLists.txt  RpcServerLauncher.cpp
test/mysql_unittest/: CMakeLists.txt  main  main.cpp
